--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.14.0",
     "express-validation": "^4.1.0",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1",
     "passport": "^0.6.0",
